# grouper

./: grouper.cabal
app/: Main.hs
src/: Grouper.hs
